ホスト検索用のAPI
